grafana/p-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    kubernetes.io/ingress.class: "nginx"
## Memaksa jalan di https
# nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
## Service Location n Characters
  - host: grafana.getarjati.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
